Previewing specific node outputs in Compositor no longer works like before #92505

Closed
opened 2021-10-26 17:07:21 +02:00 by Steffen Dünner · 5 comments

System Information
Operating system: Linux-5.11.0-38-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-26 14:39, hash: 52ccb44501
Worked: (newest version of Blender that worked as expected)

Short description of error
A long time ago there was an update to the way the "Viewer" node worked in the Compositor where you could directly SHIFT+CTRL click on a specific node output instead of having to click several times to finally connect the output that you actually want to preview. This functionality seems to be broken now, maybe after the latest changes to the nodes themes etc. ?

This was the commit from back then https://developer.blender.org/D4564

Exact steps for others to reproduce the error

  • Open Blender, switch to Compositor and check the "Use Nodes" option
  • Add a node with more that one output, e.g. the Separate RGBA node.
  • CTRL+SHIFT click on the A output socket
  • Previously the Alpha out would be connected to the Viewer
  • Now you have to click several times to finally reach the Alpha output
**System Information** Operating system: Linux-5.11.0-38-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-26 14:39, hash: `52ccb44501` Worked: (newest version of Blender that worked as expected) **Short description of error** A long time ago there was an update to the way the "Viewer" node worked in the Compositor where you could directly SHIFT+CTRL click on a specific node output instead of having to click several times to finally connect the output that you actually want to preview. This functionality seems to be broken now, maybe after the latest changes to the nodes themes etc. ? This was the commit from back then https://developer.blender.org/D4564 **Exact steps for others to reproduce the error** - Open Blender, switch to Compositor and check the "Use Nodes" option - Add a node with more that one output, e.g. the Separate RGBA node. - CTRL+SHIFT click on the A output socket - Previously the Alpha out would be connected to the Viewer - Now you have to click several times to finally reach the Alpha output

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Jacques Lucke self-assigned this 2021-10-26 17:33:02 +02:00
Member

Probably caused by 5bfe09df22.

Probably caused by 5bfe09df22.

This issue was referenced by 01d7211380

This issue was referenced by 01d7211380f513cf8f1f9c7cae923b1d19b26ebc
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92505
No description provided.