Fix T92505: previewing specific node outputs did not work anymore

This was missing from my refactor in rB5bfe09df2244cb9de0b6554a378eecef77b1e75d.